removing header border-bottom from the print.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,6 +41,12 @@ body {
   }
 }
 
+@media print {
+  .header{
+    border-bottom: none;
+  }
+}
+
   .header h3 {
     margin-top: 0;
     margin-bottom: 0;
