--- a/app/views/quadro-de-anuncios.html
+++ b/app/views/quadro-de-anuncios.html
@@ -8,44 +8,51 @@
   </div>
 
 
-  <div class="semana" ng-repeat="reuniao in quadroDeAnuncios.json | filter:quadroDeAnuncios.porMeses" ng-click="quadroDeAnuncios.editReuniao(reuniao);">
-    
-    <div class="inicio">
+  <div class="semana" ng-class="{normal: !reuniao.semana_especial, recapitulacao: reuniao.escola_do_ministerio.recapitulacao}" ng-repeat="reuniao in quadroDeAnuncios.json | filter:quadroDeAnuncios.porMeses" ng-click="quadroDeAnuncios.editReuniao(reuniao);">
+    <div class="semana-especial" ng-show="reuniao.semana_especial">
       <h1 class="titulo">Semana de {{reuniao.dia}} de {{reuniao.mes}}</h1>
-      <p class="cantico-oracao">Cântico {{reuniao.inicio.cantico}} e oração: <span class="italic-text">{{reuniao.inicio.oracao}}</span></p>
+      <h3 class="subtitulo titulo-salas">Semana Especial</h3>
     </div>
-
-    <div class="estudo-biblico">
-      <h2 class="subtitulo">Estudo Bíblico de Congregação:</h2>
-      <p class="italic-text">{{reuniao.estudo_biblico.estudo}}</p>
-      <p class="dirigente"><span class="bold-text">Dirigente:</span> <span class="italic-text">{{reuniao.estudo_biblico.dirigente}}</span></p>
-      <p class="leitor"><span class="bold-text">Leitor:</span> <span class="italic-text">{{reuniao.estudo_biblico.leitor}}</span></p>
-    </div>
-
-    <div class="escola-do-ministerio">
-      <h2 class="subtitulo">Escola do Ministério Teocrático:</h2>
-      <p class="leitura"><span class="bold-text">Destaques: </span> <span class="italic-text">{{reuniao.escola_do_ministerio.leitor}}</span> <span class="notas">({{reuniao.escola_do_ministerio.leitura}})</span></p>
-
-      <div>
-        <h3 class="subtitulo titulo-salas">Sala A</h3>
-        <p class="n1"><span class="bold-text">Nº1:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n1.aluno}}</span> <span class="notas">({{reuniao.escola_do_ministerio.sala_a.n1.leitura}})</span></p>
-        <p class="n2"><span class="bold-text">Nº2:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n2.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n2.ajudante}} </span></p>
-        <p class="n3"><span class="bold-text">Nº3:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n3.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n3.ajudante}} </span></p>
+    <div ng-show="!reuniao.semana_especial">
+      <div class="inicio">
+        <h1 class="titulo">Semana de {{reuniao.dia}} de {{reuniao.mes}}</h1>
+        <p class="cantico-oracao">Cântico {{reuniao.inicio.cantico}} e oração: <span class="italic-text">{{reuniao.inicio.oracao}}</span></p>
       </div>
 
-      <div>
-        <h3 class="subtitulo titulo-salas">Sala B</h3>
-        <p class="n1"><span class="bold-text">Nº1:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n1.aluno}}</span> <span class="notas">({{reuniao.escola_do_ministerio.sala_b.n1.leitura}})</span></p>
-        <p class="n2"><span class="bold-text">Nº2:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n2.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n2.ajudante}} </span></p>
-        <p class="n3"><span class="bold-text">Nº3:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n3.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n3.ajudante}} </span></p>
+      <div class="estudo-biblico">
+        <h2 class="subtitulo">Estudo Bíblico de Congregação:</h2>
+        <p class="italic-text">{{reuniao.estudo_biblico.estudo}}</p>
+        <p class="dirigente"><span class="bold-text">Dirigente:</span> <span class="italic-text">{{reuniao.estudo_biblico.dirigente}}</span></p>
+        <p class="leitor"><span class="bold-text">Leitor:</span> <span class="italic-text">{{reuniao.estudo_biblico.leitor}}</span></p>
       </div>
 
-    </div>
+      <div class="recapitulacao" ng-show="reuniao.escola_do_ministerio.recapitulacao">
+        <h3 class="subtitulo titulo-salas">Recapitulação</h3>
+      </div>
+      <div class="escola-do-ministerio" ng-show="!reuniao.escola_do_ministerio.recapitulacao">
+        <h2 class="subtitulo">Escola do Ministério Teocrático:</h2>
+        <p class="leitura"><span class="bold-text">Destaques: </span> <span class="italic-text">{{reuniao.escola_do_ministerio.leitor}}</span> <span class="notas">({{reuniao.escola_do_ministerio.leitura}})</span></p>
 
-    <div class="reuniao-de-servico">
-      <h2 class="subtitulo">Reunião de Serviço:</h2>
-      <p>Cantico: {{reuniao.reuniao_de_servico.cantico}}</p>
-      <!-- <div ng-repeat="parte in reuniao.reuniao_de_servico.partes"> -->
+        <div>
+          <h3 class="subtitulo titulo-salas">Sala A</h3>
+          <p class="n1"><span class="bold-text">Nº1:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n1.aluno}}</span> <span class="notas">({{reuniao.escola_do_ministerio.sala_a.n1.leitura}})</span></p>
+          <p class="n2"><span class="bold-text">Nº2:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n2.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n2.ajudante}} </span></p>
+          <p class="n3"><span class="bold-text">Nº3:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n3.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_a.n3.ajudante}} </span></p>
+        </div>
+
+        <div>
+          <h3 class="subtitulo titulo-salas">Sala B</h3>
+          <p class="n1"><span class="bold-text">Nº1:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n1.aluno}}</span> <span class="notas">({{reuniao.escola_do_ministerio.sala_b.n1.leitura}})</span></p>
+          <p class="n2"><span class="bold-text">Nº2:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n2.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n2.ajudante}} </span></p>
+          <p class="n3"><span class="bold-text">Nº3:</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n3.aluno}}</span> <span class="notas">ajudante</span> <span class="italic-text">{{reuniao.escola_do_ministerio.sala_b.n3.ajudante}} </span></p>
+        </div>
+
+      </div>
+
+      <div class="reuniao-de-servico">
+        <h2 class="subtitulo">Reunião de Serviço:</h2>
+        <p>Cantico: {{reuniao.reuniao_de_servico.cantico}}</p>
+        
         <div>
           <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[0].titulo}}</span> <span class="notas">{{reuniao.reuniao_de_servico.partes[0].tempo}}</span></p>
           <p> <span class="italic-text">{{reuniao.reuniao_de_servico.partes[0].orador}}</span></p>
@@ -60,11 +67,12 @@
           <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[2].titulo}}</span> <span class="notas">{{reuniao.reuniao_de_servico.partes[2].tempo}}</span></p>
           <p> <span class="italic-text">{{reuniao.reuniao_de_servico.partes[2].orador}}</span></p>
         </div>
-      <!-- </div> -->
-    </div>
 
-    <div class="fim">
-      <p class="cantico-oracao">Cântico {{reuniao.fim.cantico}} e oração: <span class="italic-text">{{reuniao.fim.oracao}}</span></p>
+      </div>
+
+      <div class="fim">
+        <p class="cantico-oracao">Cântico {{reuniao.fim.cantico}} e oração: <span class="italic-text">{{reuniao.fim.oracao}}</span></p>
+      </div>
     </div>
 
   </div>
@@ -100,7 +108,10 @@
               <p class="leitor"><span class="bold-text">Leitor:</span> <input type="text" class="italic-text" ng-model="quadroDeAnuncios.edicao.estudo_biblico.leitor"/></p>
             </div>
 
-            <div class="escola-do-ministerio">
+            <div class="recapitulacao" ng-show="quadroDeAnuncios.edicao.escola_do_ministerio.recapitulacao">
+              <h3 class="subtitulo titulo-salas">Recapitulação</h3>
+            </div>
+            <div class="escola-do-ministerio" ng-show="!quadroDeAnuncios.edicao.escola_do_ministerio.recapitulacao">
               <h2 class="subtitulo">Escola do Ministério Teocrático:</h2>
               <p class="leitura"><span class="bold-text">Destaques: </span> <input type="text" class="italic-text" ng-model="quadroDeAnuncios.edicao.escola_do_ministerio.leitor"/> <span class="notas">({{quadroDeAnuncios.edicao.escola_do_ministerio.leitura}})</span></p>
 
