--- a/app/views/quadro-de-anuncios.html
+++ b/app/views/quadro-de-anuncios.html
@@ -55,17 +55,17 @@
         <p>Cantico: {{reuniao.reuniao_de_servico.cantico}}</p>
         
         <div>
-          <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[0].titulo}}</span> <span class="notas">{{reuniao.reuniao_de_servico.partes[0].tempo}}</span></p>
+          <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[0].titulo}}</span> <!--<span class="notas">{{reuniao.reuniao_de_servico.partes[0].tempo}}</span> --></p>
           <p> <span class="italic-text">{{reuniao.reuniao_de_servico.partes[0].orador}}</span></p>
         </div>
 
         <div>
-          <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[1].titulo}}</span> <span class="notas">{{reuniao.reuniao_de_servico.partes[1].tempo}}</span></p>
+          <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[1].titulo}}</span> <!--<span class="notas">{{reuniao.reuniao_de_servico.partes[1].tempo}}</span> --></p>
           <p> <span class="italic-text">{{reuniao.reuniao_de_servico.partes[1].orador}}</span></p>
         </div>
 
         <div>
-          <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[2].titulo}}</span> <span class="notas">{{reuniao.reuniao_de_servico.partes[2].tempo}}</span></p>
+          <p class="nome-parte"> <span class="bold-text">{{reuniao.reuniao_de_servico.partes[2].titulo}}</span> <!--<span class="notas">{{reuniao.reuniao_de_servico.partes[2].tempo}}</span> --></p>
           <p> <span class="italic-text">{{reuniao.reuniao_de_servico.partes[2].orador}}</span></p>
         </div>
 
@@ -138,17 +138,17 @@
               <p>Cantico: {{quadroDeAnuncios.edicao.reuniao_de_servico.cantico}}</p>
               <!-- <div ng-repeat="parte in quadroDeAnuncios.edicao.reuniao_de_servico.partes"> -->
                 <div ng-if="quadroDeAnuncios.edicao.reuniao_de_servico.partes[0].titulo">
-                  <p class="nome-parte"> <span class="bold-text">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[0].titulo}}</span> <span class="notas">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[0].tempo}}</span></p>
+                  <p class="nome-parte"> <span class="bold-text">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[0].titulo}}</span> <!--<span class="notas">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[0].tempo}}</span>--></p>
                   <p> <input type="text" class="italic-text" ng-model="quadroDeAnuncios.edicao.reuniao_de_servico.partes[0].orador"/></p>
                 </div>
 
                 <div ng-if="quadroDeAnuncios.edicao.reuniao_de_servico.partes[1].titulo">
-                  <p class="nome-parte"> <span class="bold-text">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[1].titulo}}</span> <span class="notas">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[1].tempo}}</span></p>
+                  <p class="nome-parte"> <span class="bold-text">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[1].titulo}}</span> <!--<span class="notas">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[1].tempo}}</span>--></p>
                   <p> <input type="text" class="italic-text" ng-model="quadroDeAnuncios.edicao.reuniao_de_servico.partes[1].orador"/></p>
                 </div>
 
                 <div ng-if="quadroDeAnuncios.edicao.reuniao_de_servico.partes[2].titulo">
-                  <p class="nome-parte"> <span class="bold-text">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[2].titulo}}</span> <span class="notas">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[2].tempo}}</span></p>
+                  <p class="nome-parte"> <span class="bold-text">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[2].titulo}}</span> <!--<span class="notas">{{quadroDeAnuncios.edicao.reuniao_de_servico.partes[2].tempo}}</span>--></p>
                   <p> <input type="text" class="italic-text" ng-model="quadroDeAnuncios.edicao.reuniao_de_servico.partes[2].orador"/></p>
                 </div>
               <!-- </div> -->
