adding weaks of November

--- a/app/views/quadro-de-anuncios.html
+++ b/app/views/quadro-de-anuncios.html
@@ -3,6 +3,7 @@
     <label>Mês:</label>
     <select ng-model="quadroDeAnuncios.mesAtivo">
       <option value="Outubro">Outubro</option>
+      <option value="Novembro">Novembro</option>
     </select>
   </div>
 
