--- a/app/views/quadro-de-anuncios.html
+++ b/app/views/quadro-de-anuncios.html
@@ -2,8 +2,7 @@
   <div class="controles">
     <label>Mês:</label>
     <select ng-model="quadroDeAnuncios.mesAtivo">
-      <option value="Outubro">Outubro</option>
-      <option value="Novembro">Novembro</option>
+      <option value="Dezembro">Dezembro</option>
     </select>
   </div>
 
